Fix scroll on firefox

--- a/dataprep-webapp/src/app/components/widgets-containers/layout/layout.scss
+++ b/dataprep-webapp/src/app/components/widgets-containers/layout/layout.scss
@@ -30,6 +30,7 @@ $tc-layout-header-height: 48px;
 		@include flex-shrink(0);
 		@include flex-basis(0px);
 		@include align-items(stretch);
+		overflow: auto;
 
 		.main {
 			@include flex-grow(1);
